style: added scrollbar for itemlist and fixed shop's component scrollbar

--- a/src/app/view-shop/view-shop.component.less
+++ b/src/app/view-shop/view-shop.component.less
@@ -1,3 +1,8 @@
 .list-group-item-light:nth-child(n) {
     overflow-wrap: break-word;
 }
+
+.itemlist-wrapper {
+    max-height: 450px;
+    overflow-y: scroll;
+}
